Add code along and solo activity

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
         <script defer src="script.js"></script>
     </head>
     <body>
+        <div class="navbar">
+            <a href="index.html">Do Now</a>
+            <a href="domManipulation.html">DOM Manipulation</a>
+        </div>
+        <br>
+        <br>
         <h1>😊 Welcome coders!</h1>
         <button>Click Me!</button>
         <img src="https://media3.giphy.com/media/l2JHZ0dIcyFo5UQGQ/giphy.gif?cid=ecf05e47pxx1vj7ebvvgdktvyw14fypythn9lomdx0avtge9&ep=v1_gifs_search&rid=giphy.gif&ct=g">
