Added Kayswanna's unit 3 project

--- a/domManipulation.html
+++ b/domManipulation.html
@@ -1,31 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>DOM Manipulation</title>
-        <link rel="stylesheet" href="domManipulation.css">
-        <script defer src="domManipulation.js"></script>
-    </head>
-    <body>
-        <div class="navbar">
-            <a href="index.html">Do Now</a>
-            <a href="domManipulation.html">DOM Manipulation</a>
-        </div>
-        <br>
-        <br>
-        <h1>DOM Manipulation Playground</h1>
-        <h2 class="name">My name is...</h2>
-        <p class="hobby">I like to...</p>
-        <p class="location">I live...</p>
-        <button class="content-button">Change Content</button>
-        <br>
 
-        <div class="image-container">
-            <img class="image" src="https://via.placeholder.com/150" alt="Placeholder Image">
-            <br>
-            <button class="image-1-button">Show Image 1</button>
-            <button class="image-2-button">Show Image 2</button>
-        </div>
-    </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>DOM Manipulation</title>
+  <link rel="stylesheet" href="domManipulation.css">
+  <script defer src="domManipulation.js"></script>
+</head>
+
+<body>
+  <div class="navbar">
+    <a href="index.html">Do Now</a>
+    <a href="domManipulation.html">DOM Manipulation</a>
+    <a href="unit_three.html">Unit 3 Project Demo</a>
+  </div>
+  <br>
+  <br>
+  <h1>DOM Manipulation Playground</h1>
+  <h2 class="name">My name is...</h2>
+  <p class="hobby">I like to...</p>
+  <p class="location">I live...</p>
+  <button class="content-button">Change Content</button>
+  <br>
+
+  <div class="image-container">
+    <img class="image" src="https://via.placeholder.com/150" alt="Placeholder Image">
+    <br>
+    <button class="image-1-button">Show Image 1</button>
+    <button class="image-2-button">Show Image 2</button>
+  </div>
+</body>
+
 </html>
