--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <div class="navbar">
             <a href="index.html">Do Now</a>
             <a href="domManipulation.html">DOM Manipulation</a>
+            <a href="unit_three.html">Unit 3 Project Demo</a>
         </div>
         <br>
         <br>
